# ml

./: --no-fetch-missing-cities  .dockerignore  .gitattributes  .gitignore  BEAM_FLINK_GUIDE.md  FLINK_RUNNER_READY.md  GENAI_GUIDE.md  README.md  apply-cluster.ps1  dags  docker-compose.ci.yml  docker-compose.full.yml  docker-compose.full.yml.backup  docker-compose.full.yml.bak  docker-stack.yml  flink_config_updates.txt  index.html  package-lock.json  package.json  pyproject.toml  test_flink_runner.py  vite.config.js
.dvc/: config
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  docker-images.yml
airflow/: docker-compose.yml  pyproject.toml
airflow/dags/: llama_finetune_dag.py  train_dag.py  vilnius_march_temperature_dag.py  weather_lithuania_dag.py
airflow/monitoring/: prometheus.yml
airflow/monitoring/grafana/provisioning/dashboards/: provider.yml
docker/airflow/: Dockerfile
docker/frontend/: Dockerfile  nginx.conf
docker/ml-pipeline/: Dockerfile
docker/ws-server/: Dockerfile
kubernetes/: airflow.yaml  argocd-app.yaml  configmaps.yaml  dashboard.yaml  deploy-minikube.sh  flink-beam.yaml  gateway.yaml  kustomization.yaml  mlflow.yaml  monitoring.yaml  namespace.yaml  pvcs.yaml  rollout-guard.yaml  secrets.example.yaml  services.yaml
kubernetes/apps/: argocd-crds-app.yaml  ml-data-app.yaml  ml-infra-app.yaml  ml-monitoring-app.yaml  ml-networking-app.yaml  ml-serving-app.yaml  ml-stack-app.yaml  ml-system-app.yaml  sealed-secrets-app.yaml
kubernetes/argocd/: application-minikube.yaml  application.yaml  (+2 more)
python/: README.md  beam_analysis.py  check_python.py  climate_data.py  climate_evaluate.py  climate_model_contract.py  climate_train.py  data.py  diagnostics.py  eurostat_fetch.py  evaluate.py  export_frontend_data.py  llama_prepare_sft.py  llama_train_lora.py  metrics.py  mlflow_model_registry.py  model.py  plot.py  quality_gate.py  rag_pipeline.py  requirements-airflow-runtime.txt  requirements-airflow.txt  requirements-llm-train.txt  requirements.txt  run_all.py  serve.py  train.py  vilnius_march_analyze.py  vilnius_march_fetch.py  vilnius_march_plot.py  vilnius_march_quality_gate.py  weather_analyze.py  weather_common.py  weather_fetch.py  weather_plot.py  weather_quality_gate.py
scripts/: apply-cluster.sh  lint-images.sh  pin-images.sh  wsl-cleanup.sh
server/: README.md  dashboard-ws.js  package-lock.json  package.json
src/: App.jsx  main.js  styles.css  utils.js
(+157 files in other folders)
