[project]
name = "ml-training-demo"
version = "0.1.0"
description = "Training environment for the PyTorch and MLflow demo"
requires-python = ">=3.11,<3.12"
dependencies = [
    "click>=8.1.0",
    "fastapi>=0.100.0",
    "matplotlib>=3.8.0",
    "mlflow>=2.5.0",
    "numpy<2",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "torch==2.2.2",
    "uvicorn>=0.23.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["python/tests"]


[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
