[project]
name = "ml-airflow-orchestrator"
version = "0.1.0"
description = "Dedicated Airflow environment for the ML demo DAG"
requires-python = ">=3.11,<3.12"
dependencies = [
    "apache-airflow==3.2.0",
    "apache-airflow-providers-celery==3.17.2",
    "apache-airflow-providers-docker==4.5.4",
    "apache-airflow-providers-http==6.0.1",
]

[tool.uv]
package = false